--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,35 +5,52 @@ header{
 }
 .imgLogo{
     width: 8%;
+    margin-left: 5px;
 }
 h1{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.imgCarrito{
-    width: 3%;
-    margin: 5px 5px auto 5px;
-}
-a{
-    margin-top: 10px;
-    margin-right: 5px;
-    padding: 0.7em 1.5em;
-    font-size: 18px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(130, 5, 161);
-    font-size: 18px;
-    border-radius: 0.5em;
-    background: #fd82ed;
-    border: 1px solid #fb72fb;
-    transition: all .3s;
-    box-shadow: 6px 6px 12px #c5c5c5,
-                -6px -6px 12px #ffffff;
-}
-
-a:hover {
- border: 1px solid white;
-}
-
-a:active {
- box-shadow: 4px 4px 12px #c5c5c5,
-             -4px -4px 12px #ffffff;
-}
+a {
+    --color: #560bad;
+    font-family: inherit;
+    text-align: center;
+    display: inline-block;
+    width: 8em;
+    height: 2.6em;
+    line-height: 2.5em;
+    margin: 20px;
+    position: relative;
+    overflow: hidden;
+    border: 2px solid var(--color);
+    transition: color .5s;
+    z-index: 1;
+    font-size: 17px;
+    border-radius: 6px;
+    font-weight: 500;
+    color: var(--color);
+   }
+   a:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 150px;
+    width: 200px;
+    border-radius: 50%;
+   }
+   a:hover {
+    color: #fff;
+   }
+   a:before {
+    top: 100%;
+    left: 100%;
+    transition: all .7s;
+   }
+   a:hover:before {
+    top: -30px;
+    left: -30px;
+   }
+   a:active:before {
+    background: #3a0ca3;
+    transition: background 2s;
+   }
