--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,6 +6,7 @@ header{
 .imgLogo{
     width: 8%;
     margin-left: 5px;
+    border-radius: 5px;
 }
 h1{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
