--- a/src/Components/ItemListContainer/styles.css
+++ b/src/Components/ItemListContainer/styles.css
@@ -4,7 +4,62 @@
     align-items: center;
     font-size: larger;
     font-weight: bold;
+    color: #560bad;
+
 }
 .landingGreeting{
     font-size: 2em;
 }
+.loading {
+    border: 4px solid #560bad;
+    border-radius: 50em;
+    border-top: 4px solid rgb(0, 0, 0, 0);
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+/*.presentacion{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}*/
+.presentacion{
+    text-align:center;
+    font-size:1.2em;
+    color:rgb(197, 141, 207);
+    letter-spacing: -2px;
+    font-weight:500;
+    text-transform:uppercase;
+    animation:blur 3s ease-out infinite;
+    text-shadow:0px 0px 5px rgb(209, 208, 208),
+    0px 0px 7px rgb(142, 141, 141);
+  }
+
+  @keyframes blur{
+    from{
+        text-shadow:0px 0px 10px #fff,
+        0px 0px 10px #fff,
+        0px 0px 25px #fff,
+        0px 0px 25px #fff,
+        0px 0px 25px #fff,
+        0px 0px 25px #fff,
+        0px 0px 25px #fff,
+        0px 0px 25px #fff,
+        0px 0px 50px #fff,
+        0px 0px 50px #fff,
+        0px 0px 50px #7B96B8,
+        0px 0px 150px #7B96B8,
+        0px 10px 100px #7B96B8,
+        0px 10px 100px #7B96B8,
+        0px 10px 100px #7B96B8,
+        0px 10px 100px #7B96B8,
+        0px -10px 100px #7B96B8,
+        0px -10px 100px #7B96B8;}
+  }
+
+
+
