--- a/src/Components/LoginForm/LoginForm.css
+++ b/src/Components/LoginForm/LoginForm.css
@@ -1,32 +1,42 @@
-.card{
-    margin-left: 20px;
-    border: solid;
-    border-image-slice: 1;
-    border-width: 5px;
-    border-image-source: 
-    linear-gradient(
-        60deg,
-        #b16ec4,
-        #5f97b9
-    );
-    box-shadow: 0 5px 15px rgb(77, 77, 77);
+.containerLog{
+    position: relative;
+    width: 360px;
+    height: 450px;
+    background-color: blueviolet;
+    box-shadow: 0 8px 16px rgba(0,0,0,.1);
+    border-radius: 10px;
+    padding: 2rem 1.5rem;
+    overflow: hidden;
+    margin-top: 10px;
 }
-.card-img-top{
-    width: 278px;
-    height: 429px;
+.content{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
 }
-.card-img-top{
-    box-shadow: inset rgba(0, 0, 0, 0.5) 0 0 0 500px;
-    transition: box-shadow 400ms;
+.heading h2{
+    margin-top: 2rem;
+    font-weight: 600;
 }
-.card-img-top:is(:hover, :focus){
-    box-shadow: inset rgba(0, 0, 0, 0) 0 0 0 500px;
-}
-.btnDecInc{
+form{
+    width: 100%;
+    height: 250px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
-.btnNav {
+form input{
+    width: 100%;
+    height: 50px;
+    margin: .5rem 0;
+    outline: none;
+    padding: 0 .5rem;
+    border: 2px solid rgb(183, 182, 181);
+    border-radius: 5px;
+}
+.btnReg {
     background-color: rgb(239, 235, 235);
     --color: #560bad;
     font-family: inherit;
@@ -34,7 +44,7 @@
     text-decoration: none;
     display: inline-block;
     width: 8em;
-    height: 2.6em;
+    height: 4.6em;
     line-height: 2.5em;
     margin: 20px;
     position: relative;
@@ -47,7 +57,7 @@
     font-weight: 500;
     color: var(--color);
    }
-   .btnNav:before {
+   .btnReg:before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -56,15 +66,15 @@
     width: 200px;
     border-radius: 50%;
    }
-   .btnNav:hover {
+   .btnReg:hover {
     color: #fff;
    }
-   .btnNav:before {
+   .btnReg:before {
     top: 100%;
     left: 100%;
     transition: all .7s;
    }
-   .btnNav:hover:before {
+   .btnReg:hover:before {
     top: -30px;
     left: -30px;
    }
